[package]
name = "rsa-pprf"
version = "0.1.0"
edition = "2021"
authors = ["Coda Hale <coda.hale@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A puncturable PRF based on an RSA accumulator."
homepage = "https://github.com/codahale/lockstitch"
documentation = "https://docs.rs/lockstitch/"
keywords = ["crypto", "puncturable prf", "forward-security", "0-rtt", "rsa"]
categories = ["cryptography", "no-std"]
readme = "README.md"
include = ["src/lib.rs", "LICENSE-*", "README.md"]

[dependencies]
digest = { version = "0.10.6", default-features = false }
fixedbitset = { version = "0.4.2", default-features = false, features = ["serde"] }
num-bigint-dig = { version = "0.8.2", features = ["rand", "u64_digit", "serde"], default-features = false }
num-traits = { version = "0.2.15", default-features = false }
primal = "0.3.2"
rand_core = { version = "0.6.4", default-features = false }
rsa = { version = "0.7.2", default-features = false }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.6"

[workspace]
members = ["xtask"]

[[bench]]
name = "benchmarks"
harness = false
